--- a/jquery.lightbox.css
+++ b/jquery.lightbox.css
@@ -1,4 +1,4 @@
-.lightbox {
+#lightbox {
 	cursor: pointer;
 	position: fixed;
 	width: 100%;
@@ -6,10 +6,11 @@
 	top: 0;
 	left: 0;
 	background: rgb(0, 0, 0); /* IE Fallback (Solid Colour) */
+	background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAIElEQVQ4T2NkYGDYDMRkA8ZRAxhGw4BhNAyA+WAYpAMAIFgLQfO9BoEAAAAASUVORK5CYII=);
 	background: rgba(0, 0, 0, 0.7);
 	-webkit-filter: none !important;
 }
-.lightbox img {
+#lightbox img {
 	display: block;
 	position: absolute;
 	border: 5px solid #fff;
@@ -21,11 +22,10 @@ body.blurred > * {
   -webkit-transform: translate3d(0, 0, 0);
 }
 .lightbox-loading {
-	background: url(loading.gif) 0 0;
+	background: url(loading.gif) center center no-repeat;
 	width: 31px;
 	height: 31px;
-	margin-left: -16px;
-	margin-top: -16px;
+	margin: -16px 0 0 -16px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
