--- a/jquery.lightbox.css
+++ b/jquery.lightbox.css
@@ -2,10 +2,22 @@
 .lightbox-wrapper,
 .lightbox-image,
 .lightbox-loading {
+    display: block;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+}
+
+.lightbox-wrapper,
+.lightbox-prev,
+.lightbox-next,
+.lightbox-close {
+    position: absolute;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -ms-transition: all .2s;
+    transition: all .2s;
 }
 
 .lightbox {
@@ -21,18 +33,16 @@
 }
 
 .lightbox-wrapper {
-    position: absolute;
     margin: 60px;
 }
 
 .lightbox-image {
-	display: block;
-	position: absolute;
+    position: absolute;
     margin: auto;
     max-width: 100%;
     max-height: 100%;
-	border: 4px solid #fff;
-	box-shadow: 0 0 16px rgba(0,0,0,.8);
+	border: 6px solid #fff;
+	box-shadow: 0 0 20px rgba(0, 0, 0, .6);
 	border-radius: 2px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -40,32 +50,31 @@
 
 .lightbox-loading {
 	position: absolute;
-	width: 64px;
-	height: 64px;
+	width: 60px;
+	height: 60px;
 	margin: auto;
 }
 
 .lightbox-title {
     display: block;
-	position: relative;
+    width: 100%;
+	position: absolute;
     padding: 8px;
     color: #fff;
 	text-align: center;
-	background-color: rgba(0,0,0,.8);
+    bottom: 0;
+	background-color: rgba(0,0,0,.6);
 }
 
-.lightbox-prev, .lightbox-next, .lightbox-close {
-	position: absolute;
-	z-index: 2000;
-	background: no-repeat center center;
+.lightbox-prev,
+.lightbox-next,
+.lightbox-close {
 	opacity: .4;
-	-webkit-transition: all .2s;
-	-moz-transition:    all .2s;
-	-ms-transition:     all .2s;
-	transition: 		all .2s;
 }
 
-.lightbox-prev:hover, .lightbox-next:hover, .lightbox-close:hover {
+.lightbox-prev:hover,
+.lightbox-next:hover,
+.lightbox-close:hover {
 	opacity: 1;
 }
 
@@ -74,19 +83,24 @@
 	top: 0;
     width: 60px;
     height: 60px;
-	background-image: url('close.png');
+    z-index: 3000;
+	background: url('close.png') no-repeat right 20px top 20px;
 }
+
 .lightbox-next {
 	right: 0;
 	top: 0;
     width: 60px;
     height: 100%;
-	background-image: url('next.png');
+    z-index: 2000;
+	background: url('next.png') no-repeat right 20px center;
 }
+
 .lightbox-prev {
 	left: 0;
 	top: 0;
     width: 60px;
     height: 100%;
-	background-image: url('previous.png');
+    z-index: 2000;
+	background: url('previous.png') no-repeat left 20px center;
 }
